--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ langchain = "==0.0.215"
 openai = "==0.27.8"
 streamlit = "==1.24.1"
 python-dotenv = "==1.0.0"
+sounddevice = "==0.4.2"
 
 
 [dev-packages]
