--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ openai = "==0.27.8"
 streamlit = "==1.24.1"
 python-dotenv = "==1.0.0"
 sounddevice = "==0.4.2"
+PyAudio="==0.2.13"
 
 
 [dev-packages]
