--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-SUNBIRD_MUL_EN_URL = "https://api-inference.huggingface.co/models/Sunbird/sunbird-mul-en"
-HUGGINGFACE_API_KEY = "Bearer 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"
-SUNBIRD_EN_LUGA_URL = "https://api-inference.huggingface.co/models/Sunbird/sunbird-en-lg"
-SUNBIRD_ALL_LOCAL_TO_ENG = "https://api-inference.huggingface.co/models/Sunbird/mbart-mul-en"
-SUNBIRD_ACCESSTOKEN = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJCcnVuby5Tc2VraXdlcmUiLCJleHAiOjQ4Mzg2ODkxNjB9.o3u4vpxvSd10b552mS5FkATKAVN_R2_uSwC8tP0G"
-ENGLISH_TO_ALL_LOCAL_URL ='https://sunbird-ai-api-5bq6okiwgq-ew.a.run.app'
+FHAOVEQ_ZHY_RA_HEY = "uggcf://ncv-vasrerapr.uhttvatsnpr.pb/zbqryf/Fhaoveq/fhaoveq-zhy-ra"
+UHTTVATSNPR_NCV_XRL = "Ornere us_etzksvzWPaDDGRBSQHxSSIVNSTVBIGKzZK"
+FHAOVEQ_RA_YHTN_HEY = "uggcf://ncv-vasrerapr.uhttvatsnpr.pb/zbqryf/Fhaoveq/fhaoveq-ra-yt"
+FHAOVEQ_NYY_YBPNY_GB_RAT = "uggcf://ncv-vasrerapr.uhttvatsnpr.pb/zbqryf/Fhaoveq/zoneg-zhy-ra"
+FHAOVEQ_NPPRFFGBXRA = "rlWuoTpvBvWVHmV1AvVfVaE5pPV6VxcKIPW9.rlWmqJVvBvWPpaIhol5Gp2IenKqypzHvYPWyrUNvBwD4Zmt2BQxkAwO9.b3h4ickiFq10o552zF5SxNGXNIA_E2_hFjP8gC0T"
+RATYVFU_GB_NYY_YBPNY_HEY ='uggcf://fhaoveq-nv-ncv-5od6bxvjtd-rj.n.eha.ncc'
