--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,70 @@
+aioice==0.9.0
+aiortc==1.5.0
+altair==5.1.1
 anyio==4.0.0
 asttokens==2.3.0
 attrs==23.1.0
 audioread==3.0.0
+av==10.0.0
 backcall==0.2.0
 blinker==1.6.2
+cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==3.2.0
 click==8.1.7
+cryptography==41.0.3
 decorator==5.1.1
+dnspython==2.4.2
 exceptiongroup==1.1.3
 executing==1.2.0
 filelock==3.12.3
 Flask==2.3.3
 Flask-Cors==4.0.0
 fsspec==2023.9.0
+gitdb==4.0.10
+GitPython==3.1.35
+google-crc32c==1.5.0
 googletrans==4.0.0rc1
 gunicorn==21.2.0
 h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2023.1.1
-httpcore==0.18.0
-httpx==0.13.3
+httpcore
+httpx
 huggingface-hub==0.16.4
 hyperframe==5.2.0
 HyperPyYAML==1.2.1
 hypothesis==6.84.2
 idna==2.10
+ifaddr==0.2.0
 importlib-metadata==6.8.0
 ipython==8.15.0
 itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 kenlm @ https://github.com/kpu/kenlm/archive/master.zip#sha256=4d002dcde70b52d519cafff4dc0008696c40cff1c9184a531b40c7b45905be6b
 lazy_loader==0.3
 librosa==0.10.1
 llvmlite==0.40.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 msgpack==1.0.5
 numba==0.57.1
 numpy==1.24.4
 packaging==23.1
+pandas==2.1.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.0
+Pillow==9.5.0
 pipline==0.0
 platformdirs==3.10.0
 pooch==1.7.0
@@ -56,15 +72,27 @@ prompt-toolkit==3.0.39
 protobuf==4.24.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==13.0.0
 PyAudio==0.2.13
 pycparser==2.21
 pyctcdecode==0.5.0
+pydeck==0.8.0
+pyee==11.0.0
 Pygments==2.16.1
 pygtrie==2.5.0
+pylibsrtp==0.8.0
+Pympler==1.0.1
+pyOpenSSL==23.2.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0.1
+referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
 rfc3986==1.5.0
+rich==13.5.2
+rpds-py==0.10.2
 ruamel.yaml==0.17.28
 ruamel.yaml.clib==0.2.7
 safetensors==0.3.3
@@ -72,22 +100,33 @@ scikit-learn==1.3.0
 scipy==1.11.2
 sentencepiece==0.1.99
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soundfile==0.12.1
 soxr==0.3.6
 speechbrain==0.5.12
 stack-data==0.6.2
+streamlit==1.26.0
+streamlit-webrtc==0.47.0
+tenacity==8.2.3
 threadpoolctl==3.2.0
 tokenizers==0.13.3
+toml==0.10.2
+toolz==0.12.0
 torch==1.8.1+cpu
 torchaudio==0.8.1
 torchvision==0.9.1+cpu
+tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
 transformers==4.32.1
 typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3.1
 urllib3==2.0.4
+validators==0.22.0
+watchdog==3.0.0
 wcwidth==0.2.6
 Werkzeug==2.3.7
 zipp==3.16.2
