--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+easyocr==1.7.1
 aioice==0.9.0
 aiortc==1.5.0
 anyio==4.0.0
@@ -110,7 +111,7 @@ threadpoolctl==3.2.0
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
-torch==1.8.1+cpu
+torch==2.1.2
 torchaudio==0.8.1
 torchvision==0.9.1+cpu
 tornado==6.3.3
