--- a/requirements.txt
+++ b/requirements.txt
@@ -112,8 +112,8 @@ tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
 torch==2.1.2
-torchaudio==0.8.1
-torchvision==0.9.1+cpu
+torchaudio==2.1.2
+torchvision==0.16.2
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
