--- a/requirements.txt
+++ b/requirements.txt
@@ -28,11 +28,11 @@ GitPython==3.1.35
 google-crc32c==1.5.0
 googletrans==4.0.0rc1
 gunicorn==21.2.0
-h11==0.10.0
+h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2023.1.1
-httpcore
+httpcore==0.9.0
 httpx
 huggingface-hub==0.16.4
 hyperframe==5.2.0
