--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-easyocr==1.7.1
+easyocr
 aioice==0.9.0
 aiortc==1.5.0
 anyio==4.0.0
@@ -50,14 +50,14 @@ jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 kenlm @ https://github.com/kpu/kenlm/archive/master.zip#sha256=4d002dcde70b52d519cafff4dc0008696c40cff1c9184a531b40c7b45905be6b
 lazy_loader==0.3
-librosa==0.10.1
+librosa
 llvmlite==0.40.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 msgpack==1.0.5
-numba==0.57.1
+numba
 packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
@@ -128,7 +128,7 @@ wcwidth==0.2.6
 Werkzeug==2.3.7
 zipp==3.16.2
 altair==5.1.2
-numpy==1.26.1
+numpy
 pandas==2.1.2
 pydeck==0.8.0
 streamlit==1.28.1
