--- a/requirements.txt
+++ b/requirements.txt
@@ -103,7 +103,7 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soundfile==0.12.1
 soxr==0.3.6
-speechbrain==0.5.12
+speechbrain
 stack-data==0.6.2
 streamlit-webrtc==0.47.0
 tenacity==8.2.3
@@ -111,9 +111,9 @@ threadpoolctl==3.2.0
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
-torch==2.1.2
-torchaudio==2.1.2
-torchvision==0.16.2
+torch
+torchaudio
+torchvision==0.
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
