--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,9 @@ gunicorn==21.2.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
-SpeechRecognition
-dotenv 
-sounddevice 
+SpeechRecognition==3.10.1
+dotenv==0.0.5
+sounddevice==0.4.6
 hstspreload==2023.1.1
 httpcore==0.9.0
 httpx
