--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ protobuf==4.24.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==13.0.0
-dotenv
+python-dotenv==1.0.0
 pydub
 pycparser==2.21
 pyctcdecode==0.5.0
